[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Nick Dolan <nicholas.dolan1@gmail.com>"]
edition = "2018"

[features]
default = ["rayon"]

[dependencies]
rand = { version = "0.7.0", default-features = false, features = ["std", "wasm-bindgen"] }
rayon = { version = "1.2", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "game-bench"
harness = false